[package]
name = "edu-front-end-3"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
bevy_rapier3d = "0.22.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
