[package]
name = "mini-golf-kinda-edu-front-end-3"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2"
] }
bevy-inspector-egui = "0.19.0"
bevy_rapier3d = { version= "0.22.0", features = [ "wasm-bindgen" ]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
